# live_stream_analysis

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .yamllint  Dockerfile  README.md  docker-compose.intersect.yml  docker-compose.prod.yml  docker-compose.yml  environment.yml  process-background.sh  process-normalization.sh  pyproject.toml  test-read-adara.py
.github/workflows/: copilot-setup-steps.yml  package.yml  package_pixi.yaml  publish-to-ghcr.yml  test_and_deploy.yaml  unittest.yml  unittest_pixi.yaml  update-lockfiles.yml
conda.recipe/: meta.yaml
configs/: intersect.example.yaml
docs/: conf.py  index.rst
scripts/: README.md  ehsan_python_histogram.py  generate_target_pixel_geometry.py  plot_bram_histogram.py  plot_csv_histogram.py  probe_nomad_adara_stream.py
scripts/preparer/: README.md  mantid_iq_from_idf.py
src/live_stream_analysis/: __init__.py  _version.py  main.py
src/live_stream_analysis/analyzer/: __init__.py  adara.py  adara_source.py  cli.py  factory.py  histogram.py  histogram_runner.py  live_plot.py  nexus.py  runner.py
src/live_stream_analysis/intersect/: __init__.py  client.py  config.py  data_models.py  events.py  service.py
src/live_stream_analysis/preparer/: __init__.py  calibration.py  converter.py  instrument.py  nexus.py
src/live_stream_analysis/readadara/: __init__.py  adara_reader.py  mutable_packets.py
tests/: test_version.py
tests/analyzer/: test_adara_source.py  test_analyze_cli.py  test_histogram.py  test_intersect.py  test_nexus.py  test_runner.py
tests/data/calibration/: NOMAD_243451_2026-06-09_shifter.h5
tests/data/csv_files/: background.csv  normalization.csv
tests/data/idf/: NOMAD_Definition_19000000-20120630.xml  NOMAD_Definition_20120701-20120731.xml  POWGEN_Definition_2010.xml  POWGEN_Definition_2011-02-25.xml  POWGEN_Definition_2012-08-20.xml  POWGEN_Definition_2012-11-27.xml  POWGEN_Definition_2013-06-01.xml  POWGEN_Definition_2013-08-01.xml
tests/integration/: test_intersect_service_dispatch.py
tests/intersect/: test_monitoring.py  test_service.py
tests/preparer/: test_converter.py  test_instrument.py
tests/readadara/: adara_fixtures.py  test_adara_reader.py
tests/unit/analyzer/: adara_fixtures.py  test_adara_runtime_conversion.py  test_adara_source.py  test_analyze_cli.py  test_histogram.py  test_histogram_runtime_state.py  test_intersect.py  test_intersect_service_updates.py
tests/unit/intersect/: test_client.py  test_monitoring.py
tests/unit/preparer/: test_converter.py  test_instrument.py
