[project]
name = "live_stream_analysis"
description = "Python repo for live stream analysis neutrons"
version = "0.2.0"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["neutrons", "python"]
readme = "README.md"
dependencies = [
  # Dependencies available from both PyPI and conda should be listed here
  "numpy>=2.2.6,<3",
  "readadara>=0.0.1",
]

[project.optional-dependencies]
docs = ["sphinx", "sphinx_rtd_theme", "myst-parser"]

[project.scripts]
live-stream-analysis-cli = "live_stream_analysis.main:main"
live_stream_analysis = "live_stream_analysis.main:main"

[project.urls]
homepage = "https://github.com/neutrons/live_stream_analysis/"   # if no homepage, use repo url
repository = "https://github.com/neutrons/live_stream_analysis/"
# documentation = add_url_to_readthedoc_here
issues = "https://github.com/neutrons/live_stream_analysis/issues"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build]
artifacts = [
  "src/live_stream_analysis/**/*.yml",
  "src/live_stream_analysis/**/*.yaml",
  "src/live_stream_analysis/**/*.ini",
]

[tool.hatch.build.targets.wheel]
packages = ["src/live_stream_analysis"]

[dependency-groups]
test = ["pytest", "pytest-cov", "pytest-repeat", "pytest-xdist"]
dev = ["pip-audit", "pre-commit", "ruff"]
docs = ["myst-parser", "sphinx", "sphinx_rtd_theme"]
package = ["build", "twine"]
jupyter = ["ipympl", "ipywidgets", "jupyterlab"]

[tool.uv]
default-groups = ["dev", "test"]

[tool.pytest.ini_options]
addopts = "-v --cov=live_stream_analysis --cov-report=term-missing"
pythonpath = [".", "src", "scripts"]
testpaths = ["tests"]
python_files = ["test*.py"]
norecursedirs = [
  ".git",
  "tmp*",
  "_tmp*",
  "__pycache__",
  "*dataset*",
  "*data_set*",
]
markers = ["mymarker: example markers goes here"]

# ------------------ #
# Ruff configuration #
# ------------------ #
# NOTE: We recommend to list the ruff configuration here and let pre-commit read it from here.
#       This way, the configuration is consistent across all users.
[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["notebooks/**", "**/*.ipynb"]

[tool.ruff.lint]
select = ["A", "ARG", "ASYNC", "BLE", "C90", "E", "F", "I", "N", "UP032", "W"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["live_stream_analysis"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
